--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -177,9 +177,18 @@ Diese Klasse ist das Herz der Bibliothek. Sie ist die Schnittstelle, über die s
 Die Klasse EarablesConnection implementiert das IEarablesConnection Interface und ist die konkrete Klasse, die sich um die BLE-Verbindung kümmert.\\
 
 
+
+
+\begin{minipage}[b]{0.5\textwidth}
 	\subsubsection{Static Class Constants}
 	
-	\includegraphics[width=0.5\textwidth]{bilder/BibPackageKlassen/Constants.png}
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=\textwidth]{bilder/BibPackageKlassen/Constants.png}
+\end{minipage}
+
+	
+
 
 
 \paragraph{Klassenbeschreibung:}
@@ -192,7 +201,7 @@ Die Constants Klasse enthält alle Konstanten, die benötigt werden, um die ents
 	\item[+] \textbf{PUSHBUTTON\_CHAR: string} \\Dieser string enthält die Beschreibung der Charakteristik, in dem der Push Button Status gespeichert wird.
 	\item[+] \textbf{BATTERY\_CHAR: string}\\ Dieser string enthält die Beschreibung der Charakteristik, in dem die Batterieladung gespeichert wird.
 	\item[+] \textbf{ACCELEROMETER\_GYROSCOPE\_LPF\_CHAR: string}\\ Dieser string enthält die Beschreibung der Charakteristik, welche beschrieben wird, um den Low Pass Filter für den Accelerometer und das Gyroscope zu setzen.
-\item[+] \textbf{ACCESS\_SERVICE: string}\\ Dieser string enthält die Beschreibung des Service Access-Service, der alle benötigten Charakteristiken enthält.
+\item[+] \textbf{ACCESS\_SERVICE: string}\\ Dieser string enthält die Beschreibung des Service Access-Service, der alle benötigten Charakteristiken enthält.\\
 \end{itemize}
 
 \begin{minipage}[b]{0.5\textwidth}
@@ -215,7 +224,7 @@ Dieses Enum beinhaltet alle möglichen LPF Werte, die der LPF für das Gyroscope
 	\item \textbf{10Hz}\\Steht dafür, dass der LPF 10 Hz annehmen kann.
 	\item \textbf{5Hz}\\Steht dafür, dass der LPF 5 Hz annehmen kann.
 	\item \textbf{3600Hz}\\Steht dafür, dass der LPF 3600 Hz annehmen kann.
-	\item \textbf{OFF}\\Steht dafür, dass der LPF aus ist.
+	\item \textbf{OFF}\\Steht dafür, dass der LPF aus ist.\\
 \end{itemize}
 
 
@@ -244,7 +253,7 @@ Dieses Enum beinhaltet alle möglichen LPF Werte, die der LPF für das Accelerom
 \begin{minipage}[b]{0.5\textwidth}
 	\subsubsection{Class ConfigContainer}
 	\end{minipage}
-	\begin{minipage}[c]{0.6\textwidth}
+	\begin{minipage}[c]{0.5\textwidth}
 	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/ConfigContainer.png}
 \end{minipage}
 \paragraph{Klassenbeschreibung:}
@@ -296,7 +305,7 @@ Diese Klasse besitzt alle ausgewerteten IMU Informationen, die in einem Datensat
 	
 	\end{minipage}
 	\begin{minipage}[c]{0.5\textwidth}
-	\includegraphics[width=0.6\textwidth]{bilder/BibPackageKlassen/Gyroscope.png}
+	\includegraphics[width=0.5\textwidth]{bilder/BibPackageKlassen/Gyroscope.png}
 \end{minipage}
 \paragraph{Klassenbeschreibung:}
 Diese Klasse besitzt alle ausgewerteten Gyroskopdaten.
@@ -313,7 +322,7 @@ Diese Klasse besitzt alle ausgewerteten Gyroskopdaten.
 	
 	\end{minipage}
 	\begin{minipage}[c]{0.5\textwidth}
-	\includegraphics[width=0.6\textwidth]{bilder/BibPackageKlassen/Accelerometer.png}
+	\includegraphics[width=0.5\textwidth]{bilder/BibPackageKlassen/Accelerometer.png}
 \end{minipage}
 \paragraph{Klassenbeschreibung:}
 Diese Klasse besitzt alle ausgewerteten Accelerometer Daten.
@@ -329,9 +338,14 @@ Diese Klasse besitzt alle ausgewerteten Accelerometer Daten.
 \end{itemize}
 
 
+\begin{minipage}[b]{0.5\textwidth}
 	\subsubsection{Class Characteristics}
 	
-		\includegraphics[width=0.5\textwidth]{bilder/BibPackageKlassen/Characteristics.png}
+	\end{minipage}
+	\begin{minipage}[c]{0.5\textwidth}
+	\includegraphics[width=0.8\textwidth]{bilder/BibPackageKlassen/Characteristics.png}
+\end{minipage}
+
 
 \paragraph{Klassenbeschreibung:}
 In dieser Klasse werden die Charakteristiken gespeichert, um sie nicht jedes Mal neu laden zu müssen, wenn sie gebraucht werden. Der Datentyp ICharacteristic befindet sich in dem BLE\_Plugin.
