--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -384,7 +384,7 @@ Enthält alle relevanten Informationen, die als Parameter mit dem Event ButtonPr
 	\includegraphics[width=\textwidth]{bilder/BibPackageKlassen/DataEventArgs.png}
 \end{minipage}
 \paragraph{Klassenbeschreibung:}
-Enthält alle relevanten Informationen, die als Parameter mit dem Event IMUDataRecieved gefeuert werden.
+Enthält alle relevanten Informationen, die als Parameter mit dem Event IMUDataReceived gefeuert werden.
 
 \paragraph{Attribute:}
 \begin{itemize}
@@ -418,7 +418,7 @@ Enthält alle relevanten Informationen, die als Parameter mit dem Event IMUDataR
 
 
 	\paragraph{Schnittstellenbeschreibung:}
-	Die Schnittstelle IManager definiert einen Service-Manager, welcher eine Menge an Services verwaltet. Dabei definiert die Schnittstelle die private Methode ServiceRegistration(out collection: IServiceCollection), um die Services bei der Erstanlegung zu registrieren. Die Schnitstelle wird sowohl auf Erweiterungsmodul-Ebene als auch Model-Ebene implementiert (Klassen IActivityManager und ServiceManager). Die IServiceCollection ist aus der Erweiterung \Gls{DependencyInjection}.
+	Die Schnittstelle IManager definiert einen Service-Manager, welcher eine Menge an Services verwaltet. Dabei definiert die Schnittstelle die private Methode ServiceRegistration(out collection: IServiceCollection), um die Services bei der Erstanlegung zu registrieren. Die Schnittselle wird sowohl auf Erweiterungsmodul-Ebene als auch Model-Ebene implementiert (Klassen IActivityManager und ServiceManager). Die IServiceCollection ist aus der Erweiterung \Gls{DependencyInjection}.
 	
 	\paragraph{Methoden:}
 	\begin{itemize}
